web/4.sparta/sparta-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sparta
  name: sparta-web-deployment
  labels:
    app: sparta
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sparta
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: sparta
    spec:
      containers:
      - name: sparta
        image: kiwini99/wizontech:bucket3
#        livenessProbe:
#          exec:
#            command:
#              - ls -l
#              - /var
#        readinessProbe:
#          exec:
#            command:
#              - ls
#              - /var
        ports:
        - containerPort: 8000
          name: sparta
          protocol: TCP
