web/4.sparta/sparta-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sparta
  name: sparta-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: sparta-web-svc
      port:
        number: 80
  rules:
    #- host: www.example.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sparta-web-svc
                port:
                  number: 80
